--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -53,11 +53,13 @@ h1.title, h2.title, h3.title, h4.title, h5.title {
   @include border-bottom;
 	font-family: 'gotham';
   	margin-bottom: 15px;
+	word-break:break-all;
 }
 
 .span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
   > .new-widget:first-child {
     margin-top: 0px;
+	word-break:break-all;
   }
 } 
 
