--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -1,7 +1,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-   <title>Nettuts Email Newsletter</title>
+   <title>Moutoners sign_up confirmation</title>
    <style type="text/css">
    	a {color: #4A72AF;}
 	body, #header h1, #header h2, p {margin: 0; padding: 0;}
@@ -116,7 +116,7 @@
 				<table id="content-3" cellpadding="10" cellspacing="0" align="center" >
 					<tr>
 						<td width="570" bgcolor="ffffff" align="center">
-							<%= link_to image_tag(attachments["mail-challenge3-01.png"].url), debate_url(@challenge)%>
+							<%= link_to image_tag(attachments["mail-challenge3-01.png"].url), challenge_url(@challenge)%>
 						</td>
 					</tr>
 				</table><!-- content-2 -->
