--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -399,7 +399,7 @@
 	}
 	.edit2{
 	margin-top:15px;
-	width:730px;
+	width:740px;
 	height:200px;
 	background-color:white;
 	border-radius:0px;
@@ -720,7 +720,7 @@
 	}
 	
 	#openning-context{
-	background-color:#C9C9C9;
+	background-color:#AAD0FF;
 	height:40px;
 	width: 760px;
 	margin-left:170px;
@@ -778,16 +778,18 @@
 	}
 	
 	#effective-context{
-	background-color:#EEE;
-	min-height:300px;
-	width: 485px;
-	margin-left:440px;
-	margin-bottom: 10px;
+	min-height:200px;
+	width: 760px;
+	margin-left:170px;
+	margin-top: 30px;
+		
 		.text{
+		min-height: 180px;
+		width: 670px;
 		font-family:"georgia";
 		font-size: 14px;
-		text-align: justify;
 		padding: 10px 25px 10px 25px;
+		border: 20px Solid #EEE;
 		}
 	}
 	
