--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -22,6 +22,7 @@
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
+						word-wrap: break-word;
 		
 		}
 		.texte2{
@@ -32,6 +33,7 @@
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
+						word-wrap: break-word;
 		
 		}
 		.texte3{
@@ -42,6 +44,7 @@
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
+			word-wrap: break-word;
 		
 		}
 
@@ -71,6 +74,7 @@
 	color: black;
 	padding: 6px;
 	margin-left: 320px;
+				word-wrap: break-word;
 	}
 	.blanc{
 	background-color: white;
@@ -89,6 +93,7 @@
 	padding: 6px;
 	margin-left: 360px;
 	margin-top: -30px;
+				word-wrap: break-word;
 	}
 	
 	.notification-link1:hover{
@@ -107,6 +112,7 @@
 			font-style: italic;
 			font-size: 14px;
 			font-family: "georgia";
+						word-wrap: break-word;
 		
 		}
 		.action-notification{
@@ -118,7 +124,7 @@
 			font-family: "bebasneue-webfont";
 			text-align: center;
 			font-size:22px;
-			color: black;
+			color: black;			word-wrap: break-word;
 			}
 		
 		.notification-link:hover{
@@ -134,7 +140,7 @@
 			font-family: "bebasneue-webfont";
 			text-align: center;
 			font-size:22px;
-			
+						word-wrap: break-word;
 		}			
 
 	}
@@ -214,6 +220,7 @@
 		margin-left: 10px;
 		width: 150px;
 		text-align: center;
+					word-wrap: break-word;
 	}
 	
 	#description-profile{
@@ -223,6 +230,7 @@
 		width: 150px;
 		margin-bottom: 8px;
 		border-bottom: 10px solid white;
+					word-wrap: break-word;
 		.field2{
 		background-color: white;
 		border-radius: 0px;
@@ -233,6 +241,7 @@
 		.texte{
 		margin-top: 5px;
 		margin-bottom: 8px;
+					word-wrap: break-word;
 		}
 		.actions{
 		margin-top:-8px;
@@ -376,7 +385,7 @@
 	background-color: #AAD0FF;
 	margin-bottom: 30px;
 	text-align: center;
-	height: 290px;
+	min-height: 332px;
 	overflow : hidden;
 	
 	.image1{
@@ -398,6 +407,8 @@
 		width: 150px;
 		text-align: center;
 		margin: 10px;
+		min-height: 59px;
+		word-wrap: break-word;
 	}
 	.contexte{
 		height: 60px;
