--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -4,7 +4,10 @@
 	<%= render "debates/form", value: nil, debate: @debate, group: "0"%>
 	</br>
 	</br>
-	
+	<h2>Create partenariat</h2>
+		<%= render"articles/form", article: @article %>
+		</br>
+		</br>
 	<h2>Create a doulin</h2>
 	
 	<%= render "doulins/form"%>
