--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -1677,6 +1677,17 @@ border-image: url(border2.png) 13 fill repeat;
 	.partenaire{
 	margin-top: 20px;
 	margin-left: 865px;
+	.lien{
+		background-color: #C9C9C9;
+		width: 150px;
+		padding: 10px;
+		margin-top: 15px;
+		margin-left:0px;
+		font-family: "georgia";
+		font-style: italic;
+		font-size: 20px;
+		text-align: center;
+	}
 	}
 	
 	
