--- a/app/views/shared/_user_badge.html.erb
+++ b/app/views/shared/_user_badge.html.erb
@@ -1,15 +1,29 @@
 <section id="user-badge">
 	<div class="row">
 		<div class="span2">
-			<div class="image1">
+			<% if user.class == User%>
+			<div class="image1">				
 				<%= link_to image_tag(user.avatar.url(:medium)), user, class: "image"%>
 			</div>
 			<div class="nom">
 				<%= link_to user.name, user, class: "nom"%>
 			</div>
 			<div class="contexte">
-				<%= h Rinku.auto_link(user.content).gsub(/\n/, '<br/>').html_safe%>
+					<%= h Rinku.auto_link(user.content).gsub(/\n/, '<br/>').html_safe%>
+					<%= h Rinku.auto_link(user.url).gsub(/\n/, '<br/>').html_safe%>
 			<div>
+							 
+			<% else%>  
+			<div class="image1">
+				<%= link_to image_tag(user.avatar.url(:medium)), "http://#{@partenaire.url}", class: "image"%>
+			</div>
+			<div class="nom">
+				<%= link_to user.name, "http://#{@partenaire.url}", class: "nom"%>
+			</div>
+			<div class="contexte">
+					<%= h Rinku.auto_link(user.url).gsub(/\n/, '<br/>').html_safe%>
+			<div>
+			<% end%>				
 		</div>
 	</div>
 </section>
